--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,13 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two:700i|Montserrat:400,700|Noto+Serif:400i|Roboto+Slab:400,700');
 
-body
+$main-color: #fed136
+$darker-bg-color:  #f7f7f7
+$bolded-text-color: #222222
+$faded-text-color: #777777
+
+$timeline-color: #f1f1f1
+
+.darker-bg
+    background-color: $darker-bg-color      
 
 .navbar
     padding-top: 20px
     padding-left: 70px
     padding-right: 70px
-
-
+    transition: background-color .5s
+    // border-bottom-left-radius: 35px
+    // border-bottom-right-radius: 35px
+.backgrounded
+    background-color: rgba(0,0,0,0.7)
     
 .navbar-dark
     .navbar-nav
@@ -19,11 +30,10 @@ body
                 color: rgba(255, 255, 255, .6)
         .active
             .nav-link
-                color: #fed136!important 
-            
+                color: $main-color!important        
 
 .navbar-brand
-    color: #fed136!important
+    color: $main-color!important
     font-size: 26px
     font-family: 'Lobster Two', cursive;
     font-weight: 700
@@ -50,9 +60,149 @@ body
         font-size: 18px
         font-weight: 700
         padding: 25px 50px 
-        background-color: #fed136     
+        background-color: $main-color   
         color: white
         margin-top: 40px
+        transition: transform .3s
+        &:hover
+            background-color: darken( $main-color, 15%)
+            transform: scale(1.1)
+section
+    padding-top: 120px
+    padding-bottom: 120px
+    h1
+        font-family: 'Montserrat', sans-serif
+        font-weight: 700
+        font-size: 40px
+        color: $bolded-text-color
+    h3
+        font-family: 'Noto Serif', serif
+        font-size: 16px
+        color: $faded-text-color
+    h4
+        font-family: 'Montserrat', sans-serif
+        font-size: 18px
+        font-weight: 700
+    p
+        padding: 10px 12px
+        color: $faded-text-color
+        font-family: 'Roboto Slab', serif;
+
+.services
+    min-height: 560px      
+    
+    .service
+        margin-top: 40px
+        width: 300px
+    .circle
+        height: 68px
+        width: 68px
+        border-radius: 50%
+        border: 4px solid $main-color
+        margin-top: 30px
+        margin-bottom: 30px
+        object
+            position: relative
+            transform: translateX(-50%) translateY(-50%)
+            left: 50%
+            top: 50%
+
+
+
+.projects
+    max-width: 975px
+    padding: 0
+    margin-top: 40px
+
+
+.project
+    background-color: white
+    // &:not(:first-of-type)
+    //     margin-left: 34px
+    flex: 0 0 25%
+    margin: 25px 17px
+    
+    img
+        display: block
+    // flex: 0 0 30%
+    .details
+        padding: 25px
+        p
+            padding: 0
+            margin: 0
+            font-family: 'Noto Serif', serif
+        h4
+            margin: 0
+
+.timeline
+    width: 100%
+    position: relative
+    margin-top: 80px
+    &:before
+        content: ''
+        width: 3px
+        background: $timeline-color
+        left: 50%
+        top: 0
+        bottom: 0
+        position: absolute 
+    ul
+        list-style: none    
+        margin: 0
+        // &:after
+        //     content: 'Lorem psum dolor'
+        //     height: 180px
+        //     width: 180px
+        //     border-radius: 50%
+        //     background: $main-color 
+        //     left: calc(50% - 88px)
+        //     position: absolute   
+.timeline-item
+    min-height: 175px
+    margin-bottom: 100px
+    // &:before
+    //     content: ''
+    //     height: 180px
+    //     width: 180px
+    //     border-radius: 50%
+    //     background: $main-color
+    //     left: calc(50% - 88px)
+    //     position: absolute      
+    .circle
+        left: calc(50% - 86px)
+        position: absolute
+        
+        img
+            box-sizing: border-box
+            width: 175px
+            height: 175px
+            border: 6px solid $timeline-color
+            border-radius: 50%
+            transition: transform .4s ease
+        &:hover
+            img
+                transform: scale(1.15)
+
+    &.end
+        margin-bottom: 0
+        .circle
+            background-color: $main-color
+            box-sizing: border-box
+            width: 175px
+            height: 175px
+            border: 6px solid $timeline-color
+            border-radius: 50%
+            p
+                font-family: 'Montserrat', sans-serif
+                font-size: 18px;
+                color: white
+                width: 107px
+                left: 50%
+                top: 50%
+                position: absolute
+                transform: translateX(-50%) translateY(-50%)
+                padding: 0
+                font-weight: 700
 
 @media (max-width: 767.99px)
     nav
@@ -63,3 +213,15 @@ body
         padding-right: 40px
         .nav-item
             text-align: center   
+  
+    .wrapper
+        flex-direction: column     
+@media (max-width: 767.99px)
+    .jumbotron
+        h1
+            font-size: 50px
+        h2
+            font-size: 26px  
+        button
+            font-size: 16px
+            padding: 10px 30px                 
