--- a/sass/style.sass
+++ b/sass/style.sass
@@ -44,6 +44,7 @@ section
         padding: 10px 12px
         color: $faded-text-color
         font-family: 'Roboto Slab', serif;      
+        width: 100%
 
 .navbar
     padding-top: 20px
@@ -133,9 +134,11 @@ section
     background-color: white
     flex: 0 0 25%
     margin: 25px 17px
+    min-width: 291px
     
     img
         display: block
+        width: auto
     .details
         padding: 25px
         p
